import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.itmo.mrdvd";

enum TicketType {
  VIP,
  USUAL,
  BUDGETARY,
  CHEAP
}

enum EventType {
  CONCERT,
  BASEBALL,
  OPERA
}

message Coordinates {
  float x;
  float y;
}

message Event {
  int64 id;
  string name;
  string desc;
  EventType type;
}

message Ticket {
  int64 id;
  string name;
  Coordinates coords;
  google.protobuf.Timestamp createDate;
  int32 price;
  TicketType type;
  Event event;
}

message Meta {
  map<string, Value> fields;
}

message Value {
  oneof kind {
    string string_value;
  }
}

service TicketService {
  // Obtains Meta information about the used Collection
  rpc getInfo() returns (Meta) {}
  // Obtains stream of Tickets
  rpc getTickets() returns (stream Ticket) {}
  // ...
  rpc getTicket() returns (Ticket) {}
  // ...
  rpc addTicket(Ticket) returns (Ticket) {}
  // ...
  rpc updateTicket(Ticket) returns (Ticket) {}
  // ...
  rpc removeLast() returns (google.protobuf.Empty) {}
  // ...
  rpc removeAt() returns (google.protobuf.Empty) {}
  // ...
  rpc removeById() returns (google.protobuf.Empty) {}
}